test/libsolidity/syntaxTests/literals/invalid_octal_number.sol
contract C {
    uint x = 0100;
}
// ----
// ParserError 8936: (26-27): Octal numbers not allowed.
